<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MBO Connect</string>
    <string name="unknown_error">Unknown error, please try again.</string>
    <string name="error_internet">There was a problem getting data at this time.</string>
    <string name="title_activity_user_details_controller">UserDetailsController</string>
    <string name="loading">Loading..</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="company_name">Company Name</string>
    <string name="company">COMPANY: </string>
    <string name="position">Position</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="rights_reserved">ALL RIGHTS RESERVED MBO PARTNERS 2015</string>
    <string name="demo">DEMO</string>
    <string name="enter_password">Password</string>
    <string name="active">ACTIVE</string>
    <string name="new_tag">NEW</string>
    <string name="opportunities_caps">OPPORTUNITIES</string>
    <string name="search_tag">SEARCH</string>
    <string name="search">Search</string>
    <string name="new_messages">New messages</string>
    <string name="name">name</string>
    <string name="title_activity_job_details">JobDetailsActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_list_activity">MessageListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="company_caps">COMPANY:</string>
    <string name="next_caps">NEXT</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_italic">fonts/Roboto-Italic.ttf</string>
    <string name="roboto_thin">fonts/Roboto-Thin.ttf</string>
    <string name="description_caps">DESCRIPTION</string>
    <string name="skills_caps">SKILLS</string>
    <string name="company_info_caps">COMPANY INFO</string>
    <string name="connect_caps">CONNECT</string>
    <string name="respond">Respond</string>
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hours_ago">Hours Ago</string>
    <string name="minutes_ago">Minutes Ago</string>
    <string name="days_ago">Days Ago</string>
    <string name="hour_ago">Hour Ago</string>
    <string name="minute_ago">Minute Ago</string>
    <string name="day_ago">Day Ago</string>
    <string name="please_wait">Please wait</string>
    <string name="all">ALL</string>
    <string name="responded_caps">RESPONDED</string>
    <string name="accepted">ACCEPTED</string>
    <string name="new_caps">NEW</string>
    <string name="phone">Phone: </string>
    <string name="header_text_one">MVP vs 1.932 All Rights Reserved - MBO 2015 - 10P</string>
    <string name="header_text_two">Thanks GENE and the MBO TEAM  - Best, 10Pearls TEAM</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_want_to_delete_opportunity">You will be removing this opportunity from your list view. To continue, tap Ok otherwise tap Cancel.</string>
    <string name="by_responding_opportunity">By clicking here you\'ll be notifying the Hiring Manager.</string>
    <string name="favourite">FAVORITES</string>
    <string name="responded">Responded</string>
    <string name="returns">Returns</string>
    <string name="returns_caps">" Returns"</string>
    <string name="send_email">Send Email</string>
    <string name="message_hint">Leave a message..</string>
    <string name="messages">Messages</string>
    <string name="associate">associate</string>
    <string name="opportunity_not_responded">Respond to opportunity first</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="enter_your_message">Please enter your message.</string>
    <string name="selected_position">selected_position</string>
    <string name="confidential">Confidential</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="continue_caps">CONTINUE</string>
    <string name="enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="invalid_creds">Incorrect username or password</string>
    <string name="enterpriseUser">Enterprise users are not allowed</string>
    <string name="settings">Settings</string>
    <string name="opportunities">Opportunities</string>
    <string name="profile">Profile</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="summary_caps">SUMMARY</string>
    <string name="education_caps">EDUCATION</string>
    <string name="resume_caps">RESUME</string>
    <string name="is_message_list">is_message_list</string>
    <string name="conversation_id">conversation_id</string>
    <string name="author_name">author_name</string>
    <string name="is_opportunity_closed">is_opportunity_closed</string>
    <string name="opportunity_closed_message">Cannot send message. Conversation has been closed</string>
    <string name="continue_small">CONTINUE</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_large">CANCEL</string>
    <string name="continue_large">CONTINUE</string>
    <string name="all_opportunities">All Opportunities</string>
    <string name="favorite_opportunities">Favorite Opportunities</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="logout_caps">LOGOUT</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="month_ago">Month Ago</string>
    <string name="months_ago">Months Ago</string>
    <string name="year_ago">Year Ago</string>
    <string name="years_ago">Years Ago</string>
    <string name="select">Select</string>
    <string name="select_phone_number">Select Phone Number</string>

</resources>
